<resources>
    <string name="app_name">همسفر</string>
    <string name="title_activity_intro"></string>
    <string name="navigation_drawer_open">باز</string>
    <string name="navigation_drawer_close">بسته</string>
    <string name="ok">باشه</string>
    <string name="next">بعدی</string>
    <string name="skip">رد کن</string>
    <string name="startDate">شروع برنامه !</string>
    <string name="slide_1_title">شبکه اجتماعی</string>
    <string name="slide_1_desc">این برنامه کامل ترین شبکه اجتماعی  هست!</string>
    <string name="slide_2_title"> آموزش </string>
    <string name="slide_2_desc">فرقی نمی کنه مبتدی باشی یا حرفه ای!</string>
    <string name="slide_3_title">تنوع</string>
    <string name="slide_3_desc">دسته بندی منظم</string>
    <string name="slide_4_title">تبادل نظرات</string>
    <string name="slide_4_desc">تو این برنامه می تونی از نظرات و تجربه های  دیگران هم استفاده کنی</string>
    <string name="play_again_desc"></string>
    <string name="play_again">نمایش مجدد</string>
    <string name="title_activity_login">ورود</string>
    <string name="title_activity_signUp">ورود به برنامه</string>
    <string name="title_signUp">ثبت نام</string>
    <string name="nav_menu_item_login">عضویت در برنامه</string>
    <string name="nav_menu_item_edit">ویرایش اطلاعات کاربری</string>
    <string name="nav_menu_item_notification">اعلانات</string>
    <string name="nav_menu_item_map">نقشه</string>
    <string name="nav_menu_item_friends">دوستان</string>
    <string name="nav_menu_item_search">جستجو</string>
    <string name="nav_menu_item_logout">خروج</string>
    <string name="nav_menu_item_toll">پرداخت عوارض خروج از کشور</string>
    <string name="nav_menu_item_no_exit">استعلام ممنوع الخروجی</string>
    <string name="nav_menu_item_show_trip">سفر ها</string>
    <string name="nav_menu_item_show_checklist">چک لیست ها</string>
    <string name="nav_menu_item_trip">افزودن سفر</string>
    <string name="nav_menu_item_checklist">افزودن چک لیست</string>
    <string name="nav_menu_item_share">ارسال برنامه</string>
    <string name="nav_menu_item_support">تماس با پشتیبانی</string>
    <string name="login_mobile">شماره همراه</string>
    <string name="login_login_btn">ورود</string>
    <string name="login_activation_code">کد فعالسازی</string>
    <string name="login_resend_code">ارسال مجدد کد</string>
    <string name="login_mobile_prefix">09</string>
    <string name="login_timer">00:02:00</string>
    <string name="enrol_id_code">کد ملی</string>
    <string name="enrol_first_name">نام</string>
    <string name="enrol_last_name">نام خانوادگی</string>
    <string name="enrol_birth_date">تاریخ تولد</string>
    <string name="enrol_save">ثبت</string>
    <string name="enrol_title">ثبت اطلاعات کاربری</string>
    <string name="welcome">به همسفر خوش آمدید</string>
    <string name="enrol_menu_select">انتخاب تصویر</string>
    <string name="enrol_menu_delete">حذف تصویر</string>
    <string name="enrol_menu_camera">دوربین</string>
    <string name="enrol_menu_gallery">گالری</string>
    <string name="DoubleBack">برای خروج کلید بازگشت را مجددا فشار دهید</string>
    <string name="home_search">جستجو ...</string>
    <string name="new_trip">تعریف سفر</string>
    <string name="new_check_list">چک لیست سفر</string>
    <string name="view_title">اطلاعات کاربری</string>
    <string name="trip_port">مبدا</string>
    <string name="trip_destination">مقصد</string>
    <string name="trip_start_date">تاریخ شروع</string>
    <string name="trip_start_time">زمان شروع</string>
    <string name="trip_end_date">تاریخ پایان</string>
    <string name="trip_end_time">زمان پایان</string>
    <string name="trip_transport">نوع وسیله</string>
    <string name="trip_save">ثبت سفر</string>
    <string name="trip_title">تعریف سفر</string>
    <string name="trip_trans_title">نوع وسیله</string>
    <string name="trip_port_title">انتخاب مبدا</string>
    <string name="trip_des_title">انتخاب مقصد</string>
    <string name="trip_default_trans">هواپیما</string>
    <string name="trip_show_check_list">چک لیست سفر اضافه شود ؟</string>
    <string name="trip_save_message">سفر شما با موفقیت ثبت شد</string>
    <string name="trip_start_after_end_exc">زمان شروع نمیتواند پس از زمان پایان باشد</string>
    <string name="trip_end_before_start_exc">زمان پایان نمیتواند پیش از زمان شروع باشد</string>
    <string name="trip_card_port">مبدا : </string>
    <string name="trip_card_destination">مقصد : </string>
    <string name="trip_card_start_date">تاریخ شروع : </string>
    <string name="trip_card_start_time">زمان شروع : </string>
    <string name="trip_card_end_date">تاریخ پایان : </string>
    <string name="trip_card_end_time">زمان پایان : </string>
    <string name="trip_card_transport">نوع وسیله : </string>
    <string name="trip_card_title">اطلاعات سفر</string>
    <string name="check_list_title">چک لیست سفر</string>
    <string name="cl_list_edit_title">ویرایش چک لیست</string>
    <string name="edit_title">ویرایش اطلاعات کاربری</string>
    <string name="cl_topic">عنوان</string>
    <string name="cl_date">تاریخ</string>
    <string name="cl_time">ساعت</string>
    <string name="cl_alarm">تنظیم آلارم</string>
    <string name="cl_save">ثبت چک لیست</string>
    <string name="cl_add">افزودن</string>
    <string name="cl_edit">ویرایش</string>
    <string name="cl_cancel">انصراف</string>
    <string name="cl_edit_title">ویرایش</string>
    <string name="trip_list_title">سفر ها</string>
    <string name="trip_list_expired">به پایان رسیده است</string>
    <string name="trip_list_no_trip_message">سفری با این مشخصات یافت نشد</string>
    <string name="cl_list_title">چک لیست ها</string>
    <string name="cl_list_public">عمومی</string>
    <string name="cl_list_trip">سفرها</string>
    <string name="delete_title">حذف</string>
    <string name="delete_message">مورد انتخابی حذف شود؟</string>
    <string name="delete_positive">حذف</string>
    <string name="delete_negative">انصراف</string>
    <string name="trip_edit_title">ویرایش سفر</string>
    <string name="trip_edit_done">ثبت</string>
    <string name="trip_edit_cancel">انصراف</string>
    <string name="trip_edit_show_check_list">چک لیست سفر نمایش داده شود ؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="save">ثبت</string>
    <string name="cancel_button">انصراف</string>
    <string name="exit_message">تغییرات ثبت شوند ؟</string>
    <string name="exit_save_changes">ثبت تغییرات</string>
    <string name="exit_discard">حذف تغیبرات</string>
    <string name="exit_cancel">انصراف</string>
    <string name="save_success_message">ثبت با موفقیت انجام شد</string>
    <string name="save_failure_message">خطا در برقراری ارتباط با سرور</string>
    <string name="trip_filter_apply">اعمال</string>
    <string name="trip_filter_title">فیلتر سفر ها</string>
    <string name="trip_filter_clear">حذف فیلتر</string>
    <string name="trip_filter_topic_text">عنوان</string>
    <string name="trip_filter_success_clear">فیلترها حذف شدند</string>
    <string name="trip_filter_from_date">از تاریخ</string>
    <string name="trip_filter_to_date">تا تاریخ</string>
    <string name="main_toll_text">پرداخت عوارض خروج از کشور</string>
    <string name="main_no_exit_text">استعلام ممنوع الخروجی</string>
    <string name="main_tourism_info_text">اطلاعات توریستی</string>
    <string name="main_police_10_text">آدرس دفاتر پلیس + 10</string>
    <string name="main_hotel_info_text">اطلاعات هتل ها</string>
    <string name="main_museum_info">اطلاعات موزه ها</string>
    <string name="tourism_info_title">اطلاعات توریستی</string>
    <string name="police_ten_title">آدرس دفاتر پلیس + 10</string>
    <string name="hotel_info_title">اطلاعات هتل ها</string>
    <string name="museum_info_title">اطلاعات موزه ها</string>
    <string name="toolbar_search_hint">جستجو...</string>
    <string name="place_card_name">نام :</string>
    <string name="place_card_phone">شماره تماس :</string>
    <string name="place_card_address">آدرس :</string>
    <string name="place_info_city_title">انتخاب شهر</string>
    <string name="place_info_country_title">انتخاب کشور</string>
    <string name="internet_error">عدم اتصال به اینترنت</string>
    <string name="login_mobile_empty_error">شماره همراه را وارد نمایید</string>
    <string name="login_mobile_correct_error">شماره همراه را به صورت صحیح وارد نمایید</string>
    <string name="login_empty_activation_code_error">کد فعالسازی را وارد نمایید</string>
    <string name="enrol_id_code_empty_error">کد ملی را وارد نمایید</string>
    <string name="enrol_invalid_id_code_error">کد ملی نامعتبر است</string>
    <string name="enrol_empty_name_error">نام خود وارد نمایید</string>
    <string name="enrol_empty_last_name_error">نام خانوادگی خود را وارد نمایید</string>
    <string name="enrol_empty_birth_error">تارخ تولد را وارد نمایید</string>
    <string name="enrol_correct_info_error">اطلاعات را به صورت صحیح وارد کنید</string>
    <string name="enrol_correct_birth_error">تاریخ تولد را به صورت صحیح وارد کنید</string>
    <string name="trip_empty_port_error">مبدا را وارد نمایید</string>
    <string name="trip_empty_des_error">مقصد را وارد نمایید</string>
    <string name="trip_empty_start_date_error">تاریخ شروع را وارد نمایید</string>
    <string name="trip_empty_start_time_error">زمان شروع را وارد نمایید</string>
    <string name="trip_empty_end_date_error">تاریخ پایان را وارد نمایید</string>
    <string name="trip_empty_end_time_error">زمان پایان را وارد نمایید</string>
    <string name="trip_filter_exist">trip_filter_exist</string>
    <string name="trip_filter_topic">trip_filter_topic</string>
    <string name="trip_filter_port">trip_filter_port</string>
    <string name="trip_filter_port_id">trip_filter_port_id</string>
    <string name="trip_filter_destination">trip_filter_destination</string>
    <string name="trip_filter_destination_id">trip_filter_destination_id</string>
    <string name="trip_filter_start">trip_filter_start</string>
    <string name="trip_filter_end">trip_filter_end</string>
    <string name="sefr">۰</string>
    <string name="yek">۱</string>
    <string name="dou">۲</string>
    <string name="se">۳</string>
    <string name="chahar">۴</string>
    <string name="panj">۵</string>
    <string name="shesh">۶</string>
    <string name="haft">۷</string>
    <string name="hasht">۸</string>
    <string name="noh">۹</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="Exc.3000">خطا در اجرای بروزرسانی . مجددا تلاش نمایید</string>
    <string name="Exc.100000">متد مورد نظر تعریف نشده ، لطفا با پشتیبانی تماس بگیرید.</string>
    <string name="Exc.100001">خطای وب سرویس ، لطفا با پشتیبانی تماس بگیرید.</string>
    <string name="Exc.100010">نام کاربری شما غیرفعال می باشد.</string>
    <string name="Exc.100011">نام کاربری خود را از طریق پیامک فعال نمایید</string>
    <string name="Exc.100012">شماره وارد شده نا معتبر است.</string>
    <string name="Exc.100013">خطا در ارسال پیامک . دقایقی بعد تلاش کنید.</string>
    <string name="Exc.100009">دستگاه دیگری با نام کاربری شما وارد شده است.مجددا لاگین کنید</string>
    <string name="Exc.100008">دوباره به سیستم وارد شوید</string>
    <string name="Exc.100007">برای انجام این کار باید وارد برنامه\nشده باشی ! \n میتونی با لمس دکمه زیر وارد بشی </string>
    <string name="Exc.100006">نام کاربری یا کلمه عبور اشتباهه</string>
    <string name="Exc.100002">برنامه با خطای نامشخصی\n روبرو شد!</string>
    <string name="Exc.100014">این اکانت قبلا فعال شده  . لطفا به سیستم وارد شو</string>
    <string name="Exc.100015">برای ارسال مجدد پیامک باید 5 دقیقه منتظر بمونید</string>
    <string name="Exc.100016">شماره تلفن وارد شده در سیستم ثبت نشده .</string>
    <string name="Exc.100">برنامه نیاز به روزرسانی دارد . لطفا از برنامه خارج شده و مجددا وارد شوید</string>
</resources>