<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="right"
    android:gravity="right"
    android:layoutDirection="rtl">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/main_nav_show_trips"
            android:icon="@drawable/nav_trips"
            android:title="@string/nav_menu_item_show_trip" />

        <item
            android:id="@+id/main_nav_show_checklists"
            android:icon="@drawable/nav_checklists"
            android:title="@string/nav_menu_item_show_checklist" />

        <item
            android:id="@+id/main_nav_trip"
            android:icon="@drawable/nav_add_trip"
            android:title="@string/nav_menu_item_trip" />

        <item
            android:id="@+id/main_nav_checklist"
            android:icon="@drawable/nav_add_checklist"
            android:title="@string/nav_menu_item_checklist" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/main_nav_login"
            android:icon="@drawable/login"
            android:title="@string/nav_menu_item_login" />

        <item
            android:id="@+id/main_nav_edit"
            android:icon="@drawable/edit"
            android:title="@string/nav_menu_item_edit" />

        <item
            android:id="@+id/main_nav_friends"
            android:icon="@drawable/friends"
            android:title="@string/nav_menu_item_friends" />

        <item
            android:id="@+id/main_nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_menu_item_logout" />

    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/main_nav_no_exit"
            android:icon="@drawable/map"
            android:title="@string/nav_menu_item_no_exit" />

        <item
            android:id="@+id/main_nav_toll"
            android:icon="@drawable/map"
            android:title="@string/nav_menu_item_toll" />

    </group>

    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">

        <item
            android:id="@+id/main_nav_map"
            android:icon="@drawable/map"
            android:title="@string/nav_menu_item_map" />

        <item
            android:id="@+id/main_nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/nav_menu_item_notification" />

        <item
            android:id="@+id/main_nav_search"
            android:icon="@drawable/search"
            android:title="@string/nav_menu_item_search" />

    </group>

    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">

        <item
            android:id="@+id/main_nav_share"
            android:icon="@drawable/nav_share"
            android:title="@string/nav_menu_item_share" />

        <item
            android:id="@+id/main_nav_support"
            android:icon="@drawable/nav_support"
            android:title="@string/nav_menu_item_support" />

    </group>

</menu>
