<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trip_card_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_1sdp"
        android:elevation="@dimen/trip_card_elevation"
        android:padding="@dimen/trip_card_margin"
        card_view:cardCornerRadius="@dimen/trip_card_corner_radius"
        card_view:cardElevation="@dimen/trip_card_elevation"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trip_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorHeader"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/trip_card_title"
                android:textColor="@color/light_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/trip_card_destination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/trip_destination"
                    android:textDirection="rtl"
                    android:textColor="@color/dark_text"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trip_card_destination"
                    android:textDirection="rtl"
                    android:gravity="left"
                    android:textColor="@color/label_text"
                    />

                <TextView
                    android:id="@+id/trip_card_port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/trip_port"
                    android:textDirection="rtl"
                    android:textColor="@color/dark_text"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trip_card_port"
                    android:textDirection="rtl"
                    android:gravity="left"
                    android:textColor="@color/label_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/trip_card_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/trip_end_date"
                    android:textDirection="rtl"
                    android:textColor="@color/dark_text"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trip_card_end_date"
                    android:textDirection="rtl"
                    android:gravity="left"
                    android:textColor="@color/label_text"
                    />

                <TextView
                    android:id="@+id/trip_card_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/trip_start_date"
                    android:textDirection="rtl"
                    android:textColor="@color/dark_text"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trip_card_start_date"
                    android:textDirection="rtl"
                    android:gravity="left"
                    android:textColor="@color/label_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/trip_card_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/trip_end_time"
                    android:textDirection="rtl"
                    android:textColor="@color/dark_text"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trip_card_end_time"
                    android:textDirection="rtl"
                    android:gravity="left"
                    android:textColor="@color/label_text"
                    />

                <TextView
                    android:id="@+id/trip_card_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/trip_start_time"
                    android:textDirection="rtl"
                    android:textColor="@color/dark_text"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trip_card_start_time"
                    android:textDirection="rtl"
                    android:gravity="left"
                    android:textColor="@color/label_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6"
                android:gravity="right">

                <TextView
                    android:id="@+id/trip_card_transport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/trip_transport"
                    android:textDirection="rtl"
                    android:textColor="@color/dark_text"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trip_card_transport"
                    android:textDirection="rtl"
                    android:gravity="left"
                    android:textColor="@color/label_text"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>